fix(gtk4): replace deprecated -gtk-scaled() with plain url() for GTK 4.22+
-gtk-scaled() was removed in GTK 4.22. All background-image and
-gtk-icon-source declarations using -gtk-scaled(url("X"), url("Y"))
are now silently dropped, causing window control buttons (close,
minimize, maximize), switches, checkboxes, and radio buttons to
become invisible.

Replace every occurrence with the 1x url() argument, which remains
valid in GTK 4.22+ and works correctly at all DPI scales via the
existing PNG assets.

Fixes: https://github.com/EliverLara/Nordic/issues/347

--- a/gtk-4.0/widgets/_switches.scss
+++ b/gtk-4.0/widgets/_switches.scss
@@ -9,12 +9,12 @@ switch {
   background-size: 40px 24px;
   background-repeat: no-repeat;
   background-position: center center;
-  background-image: -gtk-scaled(url("../assets/switch-off.svg"),url("../assets/switch-off.svg"));
+  background-image: url("../assets/switch-off.svg");
 
   &:disabled {
-    background-image: -gtk-scaled(url("../assets/switch-insensitive.svg"),url("../assets/switch-insensitive.svg"));
+    background-image: url("../assets/switch-insensitive.svg");
     slider {
-      background-image: -gtk-scaled(url("../assets/switch-slider-insensitive.svg"),url("../assets/switch-slider-insensitive@2.png"));
+      background-image: url("../assets/switch-slider-insensitive.svg");
     }
   }
 
@@ -26,14 +26,14 @@ switch {
   }
   
   &:checked {
-    background-image: -gtk-scaled(url("../assets/switch-on.svg"),url("../assets/switch-on.svg"));
+    background-image: url("../assets/switch-on.svg");
     slider {
-      background-image: -gtk-scaled(url("../assets/switch-slider-on.svg"),url("../assets/switch-slider-on@2.png"));
+      background-image: url("../assets/switch-slider-on.svg");
     }
     &:disabled {
-      background-image: -gtk-scaled(url("../assets/switch-on-insensitive.svg"),url("../assets/switch-on-insensitive.svg"));
+      background-image: url("../assets/switch-on-insensitive.svg");
       slider {
-        background-image: -gtk-scaled(url("../assets/switch-slider-on-insensitive.svg"),url("../assets/switch-slider-on-insensitive@2.png"));
+        background-image: url("../assets/switch-slider-on-insensitive.svg");
       }
     }
   }
@@ -45,7 +45,7 @@ switch {
     background-repeat: no-repeat;
     background-position: left center;
     background-color: transparent;
-    background-image: -gtk-scaled(url("../assets/switch-slider-off.svg"),url("../assets/switch-slider-off@2.png"));
+    background-image: url("../assets/switch-slider-off.svg");
   }
 
   &:checked slider { }
@@ -55,9 +55,9 @@ switch {
 
   row:selected & {
     &:checked {
-      background-image: -gtk-scaled(url("../assets/switch-off.svg"),url("../assets/switch-off.svg"));
+      background-image: url("../assets/switch-off.svg");
       slider {
-        background-image: -gtk-scaled(url("../assets/switch-slider-on-selected.svg"),url("../assets/switch-slider-on-selected@2.png"));
+        background-image: url("../assets/switch-slider-on-selected.svg");
       }
     } 
   }
