--- a/gtk-4.0/widgets/_windows.scss
+++ b/gtk-4.0/widgets/_windows.scss
@@ -98,21 +98,21 @@ windowcontrols {
     }
     
     &.close {
-      background-image: -gtk-scaled(url("../assets/close.png"),url("../assets/close@2.png"));
+      background-image: url("../assets/close.png");
       &:hover,&:active {
-        background-image: -gtk-scaled(url("../assets/close_prelight.png"),url("../assets/close_prelight@2.png"));
+        background-image: url("../assets/close_prelight.png");
       }
     }
     &.maximize {
-      background-image: -gtk-scaled(url("../assets/maximize.png"),url("../assets/maximize@2.png"));
+      background-image: url("../assets/maximize.png");
       &:hover,&:active {
-        background-image: -gtk-scaled(url("../assets/maximize_prelight.png"),url("../assets/maximize_prelight@2.png"));
+        background-image: url("../assets/maximize_prelight.png");
       }
     }
     &.minimize {
-      background-image: -gtk-scaled(url("../assets/min.png"),url("../assets/min@2.png"));
+      background-image: url("../assets/min.png");
       &:hover,&:active {
-        background-image: -gtk-scaled(url("../assets/min_prelight.png"),url("../assets/min_prelight@2.png"));
+        background-image: url("../assets/min_prelight.png");
       }
     }
   
@@ -124,7 +124,7 @@ windowcontrols {
   
     &:backdrop { 
       -gtk-icon-shadow: none; 
-      background-image: -gtk-scaled(url("../assets/close_unfocused.png"),url("../assets/close_unfocused@2.png"));
+      background-image: url("../assets/close_unfocused.png");
     }
   }
 }
